# Nayak

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: web_researcher.py
nayak/: __init__.py  __main__.py  agent.py  cli.py
nayak/action/: __init__.py  base.py
nayak/brain/: __init__.py  gemini.py  ollama.py
nayak/cognition/: base.py  fastpath.py  gemini.py  ollama.py
nayak/communication/: __init__.py  base.py  text.py
nayak/core/: __init__.py  bus.py  loader.py  registry.py  runtime.py
nayak/eyes/: __init__.py  browser.py
nayak/hal/: __init__.py  base.py  camera.py  raspberry_pi.py
nayak/hands/: __init__.py  computer.py
nayak/memory/: __init__.py  base.py  store.py
nayak/perception/: __init__.py  base.py
nayak/safety/: base.py  engine.py
nayak/sdk/: __init__.py  base.py  platform.py
nayak/update/: __init__.py  base.py  engine.py
scripts/: setup.bat
skills/: test_plugin.py
tests/: test_agent.py
